# pkmake

./: Cargo.toml
egs/manifests/flavored/: manifest.yaml
egs/manifests/nonflavored_git/: manifest.yaml
src/: build_env.rs  context.rs  error.rs  flavor.rs  lib.rs  main.rs  manifest_info.rs  named_site.rs  override_pair.rs  platform.rs  site.rs  traits.rs  utils.rs  vcs.rs
src/targets/: build.rs  build_test.rs  docs.rs  docs_test.rs  install.rs  install_test.rs  mod.rs  run.rs  run_test.rs  test.rs  test_test.rs
src/unit_tests/: context_test.rs  flavor_test.rs  manifest_info_test.rs  named_site_test.rs  override_pair_test.rs  platform_test.rs  site_test.rs  vcs_test.rs
