[package]
name = "pk-make"
version = "0.1.0"
authors = ["jlgerber <jlgerber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt="0.3"
anyhow = "1.0"
shellfn = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
subprocess="0.2"
#regex="1"
#lazy_static="1.4"